--- a/for-regulators.html
+++ b/for-regulators.html
@@ -1,4 +1,4 @@
-<!-- STATUS: AMEND — Requires alignment with EntityWorks Positioning Codex -->
+<!-- STATUS: UPDATED — Aligned with EntityWorks Positioning Codex -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.">
+        content="How the EntityWorks Standard supports regulatory understanding of representational behaviour in AI systems.">
   <link rel="canonical" href="https://entityworks.ai/for-regulators.html">
 
   <!-- Favicon -->
@@ -26,7 +26,9 @@
       --ew-muted: #666666;
     }
 
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     body {
       margin: 0;
@@ -36,7 +38,7 @@
       background-color: #fff;
     }
 
-    /* Global nav */
+    /* Global site header / nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -74,9 +76,11 @@
       border-radius: 999px;
     }
 
+    /* Canonical nav style: bold only on active item */
     .site-nav a[aria-current="page"] {
-      background: var(--ew-bg-soft);
-      border: 1px solid var(--ew-accent);
+      background: none;
+      border: none;
+      font-weight: 600;
     }
 
     main {
@@ -85,11 +89,30 @@
       padding: 0 1rem 3rem;
     }
 
-    main h1 { font-size: 2rem; margin-top: 0; margin-bottom: 0.5rem; }
-    main h2 { font-size: 1.35rem; margin-top: 2rem; margin-bottom: 0.75rem; }
+    main h1 {
+      font-size: 2rem;
+      margin-top: 0;
+      margin-bottom: 0.5rem;
+    }
 
-    ul { margin: 0.5rem 0 1rem 1.2rem; padding: 0; }
-    li { margin: 0.25rem 0; }
+    main h2 {
+      font-size: 1.35rem;
+      margin-top: 2rem;
+      margin-bottom: 0.75rem;
+    }
+
+    p {
+      margin: 0.75rem 0;
+    }
+
+    ul {
+      margin: 0.5rem 0 1rem 1.2rem;
+      padding: 0;
+    }
+
+    li {
+      margin: 0.25rem 0;
+    }
 
     .last-updated {
       font-size: 0.85rem;
@@ -97,6 +120,7 @@
       max-width: var(--ew-max-width);
       margin: 0 auto 0;
       padding: 0 1rem 1.5rem;
+      text-align: left;
     }
   </style>
 
@@ -105,94 +129,124 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — For Regulators",
-    "description": "Guidance for regulators evaluating representational behaviour in AI systems using the EntityWorks Standard.",
+    "description": "How the EntityWorks Standard supports regulatory understanding of representational behaviour in AI systems.",
     "url": "https://entityworks.ai/for-regulators.html",
-    "publisher": { "@type": "Organization", "name": "EntityWorks" }
+    "inLanguage": "en",
+    "publisher": {
+      "@type": "Organization",
+      "name": "EntityWorks",
+      "department": "EntityWorks Standards Office"
+    }
   }
   </script>
 </head>
 
 <body>
+
+  <!-- Global site header / nav -->
   <header class="site-header">
     <div class="nav-inner">
       <a href="/index.html" class="brand">EntityWorks</a>
       <nav class="site-nav" aria-label="Primary">
         <a href="/the-standard.html">The Standard</a>
         <a href="/ai-perception.html">AI Perception</a>
-        <a href="/for-regulators.html">For Regulators</a>
+        <a href="/for-regulators.html" aria-current="page">For Regulators</a>
         <a href="/publications.html">Publications</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <h1>FOR REGULATORS</h1>
+    <h1>For regulators</h1>
+    <p><strong>Human-Facing Edition (v1.1)</strong></p>
 
-    <p>AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.</p>
+    <h2>1. Role of AI systems in regulated contexts</h2>
+    <p>
+      AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational environments. As these systems perform retrieval, reasoning, classification, and decision-support tasks, their internal representations of people, organisations, relationships, and ideas influence how information is interpreted and surfaced.
+    </p>
+    <p>
+      Regulators often engage with these systems indirectly, evaluating outcomes and behaviours without access to model internals or proprietary architectures. Understanding how models form and maintain representational meaning therefore becomes a central consideration in oversight work.
+    </p>
 
-    <p>AI Perception provides this clarity by defining the structures and evaluative principles that determine how models represent entities and how that representation influences downstream behaviour. For regulators, this discipline offers a coherent way to assess whether AI systems interpret entities consistently, transparently, and in alignment with real-world meaning.</p>
+    <h2>2. Purpose of this document</h2>
+    <p>
+      This page presents how the EntityWorks formulation of AI Perception, as defined within the EntityWorks Standard, may be relevant to regulatory work. It describes the components of the Standard that relate to representational behaviour, outlines challenges regulators may encounter when evaluating such behaviour, and provides a structured reference for understanding how the Standard can be consulted.
+    </p>
 
-    <h2>Regulatory challenges addressed by the EntityWorks Standard</h2>
+    <h2>3. AI Perception and regulatory oversight</h2>
+    <p>
+      Within the EntityWorks Standard, AI Perception defines the conceptual structures and interpretive boundaries used to describe how AI systems form, update, and express representations of entities. These structures support consistent terminology and evaluative criteria that may assist regulators in contexts where representational behaviour influences outcomes, decisions, or information flows.
+    </p>
+    <p>
+      The discipline enables representational analysis without requiring access to model internals. Instead, it offers conceptual tools for examining externally observable behaviour, such as stability, consistency, and distinguishability of entity representations.
+    </p>
 
-    <p>Regulators face increasing pressure to evaluate the behaviour of AI systems without access to model internals or proprietary architectures. The EntityWorks Standard provides a structured way to assess representational behaviour using external, observable criteria.</p>
+    <h2>4. Regulatory challenges addressed by the Standard</h2>
+    <p>Regulators may encounter challenges when assessing representational behaviour in AI systems, including:</p>
 
-    <p><strong>Key challenges addressed by the Standard include:</strong></p>
     <ul>
-      <li>interpretive opacity, where regulators cannot see how a model is understanding or representing an entity</li>
-      <li>inconsistent or unstable representations, which undermine reliability in regulated environments</li>
-      <li>cross-model divergence, where different AI systems form conflicting understandings of the same entity</li>
-      <li>lack of evaluative criteria, making it difficult to assess representational behaviour objectively</li>
-      <li>representational drift, where model understanding shifts over time without transparency or accountability</li>
+      <li>interpretive opacity</li>
+      <li>inconsistent or unstable representations</li>
+      <li>cross-model divergence</li>
+      <li>limited evaluative criteria</li>
+      <li>representational drift</li>
     </ul>
 
-    <h2>How regulators can use the Standard</h2>
+    <h2>5. How regulators may use the EntityWorks Standard</h2>
+    <p>
+      Regulators may consult the EntityWorks Standard when its terminology, structures, or evaluative components offer clarity within existing oversight frameworks. The Standard can support work in contexts where the behaviour of AI systems is relevant to regulatory duties, particularly where representational behaviour requires examination or consistent terminology assists communication across teams or institutions.
+    </p>
+    <p>
+      The Standard does not prescribe regulatory practice. It provides a formal reference that regulators may draw on where applicable.
+    </p>
 
-    <p>Regulators can use the EntityWorks Standard to establish a structured basis for evaluating how AI systems represent entities within their oversight remit. The Standard provides a clear set of definitions, interpretive rules, and diagnostic criteria that allow regulators to assess representational behaviour externally, without requiring technical access to model internals or proprietary systems.</p>
+    <h2>6. What the Standard provides to regulators</h2>
+    <p>The EntityWorks Standard includes components that may support regulatory understanding of representational behaviour:</p>
 
-    <p><strong>The Standard enables regulators to:</strong></p>
     <ul>
-      <li>assess representational behaviour using consistent, non-technical criteria</li>
-      <li>set expectations and guidance for representational stability and accuracy</li>
-      <li>identify risks arising from inconsistent, opaque, or incorrect model understanding</li>
-      <li>support oversight and assurance work across sectors and jurisdictions</li>
-      <li>harmonise evaluative approaches around a shared conceptual framework</li>
-    </ul>
-
-    <p>Regulators may draw on the Standard where it provides clarity, structure, or evaluative support within their existing oversight frameworks.</p>
-
-    <h2>What the Standard provides to regulators</h2>
-
-    <p>The EntityWorks Standard offers regulators a coherent framework for understanding, evaluating, and governing the representational behaviour of AI systems. It provides the conceptual structures and criteria needed to assess how models form, update, and express their understanding of people, organisations, relationships, and ideas.</p>
-
-    <p><strong>Regulators can draw on:</strong></p>
-    <ul>
-      <li>canonical definitions that establish consistent terminology</li>
+      <li>canonical definitions establishing consistent terminology</li>
       <li>structural frameworks describing how machine-interpreted identity is formed</li>
-      <li>diagnostic logic for assessing representational stability and behaviour</li>
-      <li>accreditation criteria that support transparent evaluation and assurance</li>
-      <li>forthcoming machine-readable specifications designed for technical reference and oversight</li>
+      <li>diagnostic logic for discussing representational stability and behaviour</li>
+      <li>accreditation criteria relevant to representational integrity</li>
+      <li>forthcoming machine-readable specifications for technical reference</li>
     </ul>
 
-    <h2>Where to go next</h2>
-
-    <p>For regulators seeking further detail on the discipline and its evaluative structures, the following pages provide the next points of reference within the EntityWorks Standard:</p>
+    <h2>7. Next points of reference</h2>
+    <p>For regulators seeking further detail within the EntityWorks Standard, the following documents provide next points of reference:</p>
 
     <ul>
-      <li><strong><a href="/the-standard.html">The Standard</a></strong> — the structural, diagnostic, and governance criteria used to evaluate representational behaviour</li>
-      <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the disciplinary foundation that defines how AI systems form and maintain their understanding of entities</li>
-      <li><strong><a href="/publications.html">Publications</a></strong> — formal papers and resources that expand the theory and regulatory applications of AI Perception</li>
+      <li><strong><a href="/the-standard.html">The Standard</a></strong> — structural, diagnostic, and governance criteria relevant to representational behaviour</li>
+      <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the disciplinary formulation describing how AI systems form and maintain their understanding of entities</li>
+      <li><strong><a href="/publications.html">Publications</a></strong> — papers and resources that expand theoretical and regulatory applications of the discipline</li>
     </ul>
 
-    <p>These materials provide the definitions, structures, and criteria required to work with the discipline in regulatory contexts. Regulators may also request clarification or interpretive guidance from the EntityWorks Standards Office through the official correspondence channel.</p>
+    <p>
+      Regulators may also contact the EntityWorks Standards Office for clarification of material defined within the Standard.
+    </p>
 
-    <p class="last-updated">Last updated: November 2025</p>
+    <h2>8. Document control</h2>
+    <p>
+      Document Title: For Regulators — Overview<br>
+      Standard Identifier: EW-REG-Overview-v1.1<br>
+      Version: v1.1<br>
+      Status: Published<br>
+      Publication Date: 2025-12-05<br>
+      Next Scheduled Review: 2026-06-05<br>
+      Maintained by: EntityWorks Standards Office
+    </p>
+
+    <p class="last-updated">
+      Last updated: December 2025
+    </p>
   </main>
 
   <div id="footer"></div>
   <script>
     fetch("/footer.html")
       .then(response => response.text())
-      .then(html => { document.getElementById("footer").innerHTML = html; });
+      .then(html => {
+        document.getElementById("footer").innerHTML = html;
+      });
   </script>
 
 </body>
