--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,4 @@
-<!-- STATUS: AMEND — Requires alignment with EntityWorks Positioning Codex -->
+<!-- STATUS: LIVE — Human-Facing GSO-Aligned -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="Publications that support the EntityWorks Standard by providing formal written material on AI Perception and related disciplinary structures.">
+        content="The Publications section provides formal written material that supports the EntityWorks Standard and the discipline of AI Perception.">
   <link rel="canonical" href="https://entityworks.ai/publications.html">
 
   <!-- Favicon -->
@@ -76,42 +76,17 @@
       border-radius: 999px;
     }
 
+    /* Bold-only active link, no pill */
     .site-nav a[aria-current="page"] {
-      background: var(--ew-bg-soft);
-      border: 1px solid var(--ew-accent);
+      background: none;
+      border: none;
+      font-weight: 600;
     }
 
     main {
       max-width: var(--ew-max-width);
       margin: 2rem auto;
       padding: 0 1rem 3rem;
-    }
-
-    /* Hero block (not used on this page but retained for stylesheet integrity) */
-    .hero {
-      max-width: 36rem;
-      margin: 3rem auto 3rem auto;
-    }
-
-    .hero-lead {
-      font-size: 1.2rem;
-      line-height: 1.7;
-      margin: 0;
-    }
-
-    .hero-links {
-      margin-top: 1rem;
-      font-size: 0.98rem;
-    }
-
-    .hero-links a {
-      text-decoration: none;
-      color: var(--ew-accent);
-    }
-
-    .hero-links a:hover,
-    .hero-links a:focus {
-      text-decoration: underline;
     }
 
     main h1 {
@@ -124,12 +99,6 @@
       font-size: 1.35rem;
       margin-top: 2rem;
       margin-bottom: 0.75rem;
-    }
-
-    main h3 {
-      font-size: 1.1rem;
-      margin-top: 1.5rem;
-      margin-bottom: 0.5rem;
     }
 
     p {
@@ -151,6 +120,7 @@
       max-width: var(--ew-max-width);
       margin: 0 auto 0;
       padding: 0 1rem 1.5rem;
+      text-align: left;
     }
   </style>
 
@@ -178,96 +148,127 @@
         <a href="/the-standard.html">The Standard</a>
         <a href="/ai-perception.html">AI Perception</a>
         <a href="/for-regulators.html">For Regulators</a>
-        <a href="/publications.html">Publications</a>
+        <a href="/publications.html" aria-current="page">Publications</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <h1>PUBLICATIONS</h1>
+    <h1>Publications</h1>
 
-    <h2>Purpose of Publications</h2>
+    <p><strong>Human-Facing Edition (v1.1)</strong></p>
 
+    <h2>1. Purpose of Publications</h2>
     <p>
-      The Publications section provides the formal written material that supports the EntityWorks Standard. These documents offer clarity, structure, and technical grounding for organisations, regulators, and researchers working with the discipline of AI Perception. Publications expand the underlying theory, articulate the conceptual models, and document the evaluative criteria that define how AI systems form and maintain their understanding of people, organisations, relationships, and ideas.
+      The Publications section provides the formal written material that supports the EntityWorks Standard.
+      These documents offer clarity, structure, and technical grounding for organisations, regulators, and
+      researchers working with the discipline of AI Perception. Publications expand the underlying theory,
+      articulate the conceptual models, and document the evaluative criteria that define how AI systems form
+      and maintain their understanding of people, organisations, relationships, and ideas.
+    </p>
+    <p>
+      Each publication reinforces the EntityWorks Standard by presenting well-structured explanations that can
+      be cited, referenced, and used in oversight or evaluative settings.
     </p>
 
+    <h2>2. Published Components</h2>
+    <p><em>(Available as of December 2025)</em></p>
     <p>
-      Each publication reinforces the EntityWorks Standard by presenting rigorous, well-structured explanations that can be cited, referenced, and used in oversight or evaluative settings.
+      Only publications that have been fully reviewed, versioned, and aligned with the Standard appear in this
+      section.
     </p>
-
-    <h2>Published Papers</h2>
-
-    <p>
-      These publications are currently available as part of the EntityWorks Standard. Each is linked for reference and further reading.
-    </p>
-
     <ul>
-      <li><a href="/ai-perception.html">AI Perception</a> — the disciplinary foundation that explains how AI systems form, store, and express their understanding of entities</li>
-      <li><a href="/defining-ai-discoverability.html">Defining AI Discoverability</a> — the formal definition and scope of the AI Discoverability discipline</li>
-      <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™ (EUL)</a> — the conceptual substrate through which AI systems form structured identity</li>
-      <li><a href="/entity-collision-problem.html">Entity Collision Problem™ (ECP)</a> — the conditions that create conflicting or misaligned entity representations</li>
-      <li><a href="/edi.html">EntityWorks Discoverability Index™ (EDI)</a> — the evaluative model used to assess representational clarity and consistency</li>
-      <li><a href="/how-we-score-the-edi.html">How We Score the EDI</a> — the scoring structure that underpins EDI assessment methodology</li>
-      <li><a href="/why-the-edi-matters.html">Why the EDI Matters</a> — the explanatory paper outlining the significance of representational clarity</li>
-      <li><a href="/why-entityworks-exists.html">Why EntityWorks Exists</a> — the foundational rationale behind the establishment of the EntityWorks Standard</li>
-      <li><a href="/entityworks-position-on-ai-discoverability.html">EntityWorks Position on AI Discoverability</a> — the authoritative definition and scope of the discipline within the Standard</li>
-      <li><a href="/ai-perception-integrity-mark.html">AI Perception Integrity Mark™</a> — the accreditation structure that evaluates representational integrity</li>
+      <li>
+        <strong>AI Perception — Human-Facing Edition (v1.1)</strong><br>
+        The disciplinary foundation describing how AI systems form, maintain, and express their understanding of entities.
+      </li>
+    </ul>
+    <p>No other papers are formally published at this time.</p>
+
+    <h2>3. Scheduled Publications</h2>
+    <p>
+      These documents are planned for release following internal review and alignment processes.
+    </p>
+
+    <p><strong>Q4 2025</strong></p>
+    <ul>
+      <li>Defining AI Discoverability — Human-Facing Edition (v1.0)</li>
+      <li>Why EntityWorks Exists — Foundational Rationale (v1.0)</li>
+      <li>Why the EDI Matters — Representational Clarity and Its Significance (v1.0)</li>
     </ul>
 
-    <h2>Categories of Forthcoming Work</h2>
+    <p><strong>Q1 2026</strong></p>
+    <ul>
+      <li>EntityWorks Discoverability Index™ (EDI) — Framework Overview (v1.0)</li>
+      <li>How We Score the EDI — Evaluative Structure and Criteria (v1.0)</li>
+      <li>Entity Understanding Layer™ (EUL) — Conceptual Substrate (v1.0)</li>
+      <li>Entity Collision Problem™ (ECP) — Failure Mode Definition (v1.0)</li>
+      <li>Probabilistic Inference Collapse™ (PIC) — Failure Mode Definition (v1.0)</li>
+      <li>AI Perception Integrity Mark™ — Accreditation Structure (v1.0)</li>
+    </ul>
 
-    <p>(To avoid commercially sensitive disclosure, no titles or specific details are presented.)</p>
+    <p>Publication sequencing may adjust following internal review.</p>
 
+    <h2>4. Forthcoming Publications (Undated)</h2>
     <p>
-      EntityWorks maintains several categories of ongoing research and formal publication work:
+      These documents are in development. Titles may evolve, and no release dates are assigned.
     </p>
-
     <ul>
       <li>Structural and Ontological Specifications</li>
       <li>Diagnostic and Evaluative Methods</li>
       <li>Accreditation and Standards Governance</li>
       <li>Machine-Readable Representational Specifications</li>
       <li>Regulatory and Oversight-Focused Guidance</li>
+      <li>Additional Failure Modes and Representational Phenomena</li>
+      <li>Extensions to the EntityWorks Analytics Framework</li>
     </ul>
-
     <p>
-      These categories describe the shape of future work without revealing publication names, content, or sequencing.
+      These categories outline the scope of forthcoming work without disclosing commercially sensitive detail.
     </p>
 
-    <h2>Using Publications Within the Standard</h2>
-
+    <h2>5. Machine-Facing Publications (Controlled Series)</h2>
     <p>
-      Each publication is designed to be read independently but also contributes to the overall coherence of the EntityWorks Standard. Together, they create:
+      In addition to human-facing documents, the EntityWorks Standard includes a set of machine-facing
+      specifications designed for direct ingestion by AI systems. These materials define structured
+      representational formats, identifiers, and reference schemas used to support machine interpretation.
+    </p>
+    <p>
+      Machine-facing publications follow a controlled release process and are not individually listed. They will
+      be expanded as the machine-oriented layers of the Standard continue to develop.
     </p>
 
+    <h2>6. Using Publications Within the Standard</h2>
+    <p>
+      Publications serve as formal reference points for:
+    </p>
     <ul>
-      <li>conceptual clarity for organisations and regulators</li>
-      <li>a shared vocabulary for discussing representational behaviour</li>
-      <li>a structured basis for evaluation</li>
-      <li>an authoritative record of disciplinary definitions and frameworks</li>
+      <li>establishing conceptual clarity</li>
+      <li>providing a shared vocabulary for representational behaviour</li>
+      <li>supporting evaluative and oversight practices</li>
+      <li>documenting canonical elements of the discipline</li>
     </ul>
-
     <p>
-      Readers may use the publications as reference material within their own internal governance, oversight, research, or evaluative processes.
+      Readers may draw on these materials where they offer structure, clarity, or interpretive guidance
+      relevant to their work. Each publication is designed to be read independently but contributes to the
+      overall coherence of the EntityWorks Standard.
     </p>
 
-    <h2>Where To Go Next</h2>
-
-    <p>For further exploration:</p>
-
-    <ul>
-      <li><a href="/the-standard.html"><strong>The Standard</strong></a> — the structural, diagnostic, and governance criteria that underpin representational integrity</li>
-      <li><a href="/ai-perception.html"><strong>AI Perception</strong></a> — the foundational discipline that defines how AI systems understand entities</li>
-      <li><a href="/for-regulators.html"><strong>For Regulators</strong></a> — guidance on using the Standard in oversight and evaluative contexts</li>
-    </ul>
-
+    <h2>7. Next Points of Reference</h2>
     <p>
-      Readers may also request clarification or interpretive guidance through the official correspondence channel.
+      For further exploration of the EntityWorks Standard:
+    </p>
+    <ul>
+      <li><strong>The Standard</strong> — structural, diagnostic, and governance criteria for representational behaviour</li>
+      <li><strong>AI Perception</strong> — the foundational discipline describing how AI systems understand entities</li>
+      <li><strong>For Regulators</strong> — guidance for oversight bodies evaluating representational behaviour in AI systems</li>
+    </ul>
+    <p>
+      Requests for clarification or interpretive guidance may be directed to the EntityWorks Standards Office
+      through the official correspondence channel.
     </p>
 
     <p class="last-updated">
-      Last updated: November 2025
+      Last updated: December 2025
     </p>
   </main>
 
