GSO Update Proper

--- a/ai-perception.html
+++ b/ai-perception.html
@@ -164,30 +164,131 @@
 
     <h2>1. Definition</h2>
     <p>
-      AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas. Within the EntityWorks Standard, this discipline provides the conceptual structures and interpretive boundaries used to describe how models represent entities and surface that understanding in their outputs.
+      AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.
+      Within the EntityWorks Standard, this discipline provides the conceptual structures and interpretive boundaries used to describe how models represent entities and surface that understanding in their outputs.
+    </p>
+    <p>
+      The definition does not extend beyond the scope of the Standard and applies only as it is formulated within this framework.
     </p>
 
     <h2>2. Role Within the EntityWorks Standard</h2>
     <p>
-      AI Perception functions as the conceptual representational layer of the EntityWorks Standard. It sets out the terminology, structures, and interpretive logic used to describe how AI systems form internal representations of entities, maintain those representations over time, and express that understanding in responses, classifications, or other outputs.
+      AI Perception functions as the conceptual representational layer of the EntityWorks Standard.
+      It sets out the terminology, structures, and interpretive logic used to describe how AI systems:
+    </p>
+
+    <ul>
+      <li>form internal representations of entities,</li>
+      <li>maintain and update those representations over time, and</li>
+      <li>express that understanding in responses, classifications, or other outputs.</li>
+    </ul>
+
+    <p>
+      The discipline operates independently of any specific model architecture.
+      It provides the conceptual foundation upon which other components of the Standard—such as structural frameworks, diagnostic methods, failure modes, and evaluative criteria—are organised.
     </p>
 
     <h2>3. Core Elements of the Discipline</h2>
-    <ul>
-      <li>formation of entity representations</li>
-      <li>stability and consistency of those representations</li>
-      <li>distinguishability between entities</li>
-      <li>interpretive rules governing expression of understanding</li>
-      <li>mechanisms that prevent representational drift</li>
-    </ul>
+    <p>Within the scope of the EntityWorks Standard, AI Perception includes the following elements:</p>
+
+    <h3>Formation of entity representations</h3>
+    <p>How AI systems establish an internal model of a person, organisation, relationship, or idea.</p>
+
+    <h3>Stability and consistency</h3>
+    <p>The degree to which these representations remain coherent over time and across contexts.</p>
+
+    <h3>Distinguishability</h3>
+    <p>The mechanisms through which a system maintains separation between similar or related entities.</p>
+
+    <h3>Interpretive rules</h3>
+    <p>The structures that determine how an AI system surfaces its internal understanding in natural-language output or other modalities.</p>
+
+    <h3>Representation management</h3>
+    <p>The behaviours that govern updating, reinforcement, and the prevention of representational drift.</p>
+
+    <p>These elements are defined only within the EntityWorks Standard and may be referenced where relevant.</p>
 
     <h2>4. Why AI Perception Matters</h2>
     <p>
-      As AI systems support search, retrieval, reasoning, and organisational workflows, their internal representations of people, organisations, relationships, and ideas influence how information is interpreted. In contexts where these systems contribute to analytical or decision-support work, misaligned or unstable representations may create inconsistencies in how entities are understood.
+      As AI systems are increasingly used for search, advisory functions, retrieval, and organisational workflows, their internal representations of entities become part of how individuals and institutions interact with information.
+    </p>
+    <p>
+      In contexts where AI systems contribute to analysis, decision-support, or interpretation, misaligned or unstable representations may introduce inconsistencies in how entities are understood.
+    </p>
+    <p>
+      The EntityWorks Standard provides a structured way to describe, analyse, and evaluate these representations.
+      It does not prescribe outcomes for external systems but offers a reference that may be used where clarity and interpretability of representational behaviour are required.
+    </p>
+
+    <h2>5. Applications Within This Framework</h2>
+    <p>
+      AI Perception may be applied in contexts where the behaviour of an AI system depends on the stability or accuracy of its internal representations.
+      Within the scope of the EntityWorks Standard, this may include:
+    </p>
+
+    <ul>
+      <li>describing how systems form and express entity representations,</li>
+      <li>analysing conditions that lead to instability or representational drift,</li>
+      <li>interpreting the structures that influence retrieval or reasoning outputs,</li>
+      <li>examining how an AI system differentiates between entities,</li>
+      <li>evaluating representational behaviour in consistent, structured terms.</li>
+    </ul>
+
+    <p>These applications operate strictly within the Standard and do not imply governance of external systems.</p>
+
+    <h2>6. Who the Discipline Is For</h2>
+    <p>
+      The formulation of AI Perception within the Standard may be relevant to:
+    </p>
+
+    <ul>
+      <li>regulators examining representational behaviour in AI systems,</li>
+      <li>enterprises developing or deploying systems that interact with real-world entities,</li>
+      <li>governance or compliance teams evaluating representational stability,</li>
+      <li>technical groups working with retrieval, reasoning, or classification models,</li>
+      <li>researchers studying interpretive structures or representational mechanisms.</li>
+    </ul>
+
+    <p>
+      The material is descriptive and definitional.
+      It may be consulted where its terminology or structures support the work being undertaken.
+    </p>
+
+    <h2>7. Relationship to Other Components of the Standard</h2>
+    <p>
+      AI Perception forms the conceptual foundation upon which other components of the EntityWorks Standard are organised.
+    </p>
+
+    <p>It relates to:</p>
+
+    <ul>
+      <li>D-Series — conceptual definitions for the discipline,</li>
+      <li>S-Series — structural frameworks describing representational models,</li>
+      <li>F-Series — failure modes identifying representational or interpretive departures,</li>
+      <li>M-Series — evaluative components used to assess aspects of the discipline.</li>
+    </ul>
+
+    <p>
+      These components operate collectively but remain internally scoped to the Standard.
+    </p>
+
+    <h2>8. Next Points of Reference</h2>
+    <p>
+      Readers wishing to explore related components of the EntityWorks Standard may consult:
+    </p>
+
+    <ul>
+      <li><a href="/the-standard.html">The EntityWorks Standard</a> — the formal structure and series organisation,</li>
+      <li><a href="/for-regulators.html">For Regulators</a> — material relevant to oversight contexts,</li>
+      <li><a href="/publications.html">Publications</a> — documents expanding on the concepts presented within the Standard.</li>
+    </ul>
+
+    <p>
+      These resources provide the structured terminology and definitions through which the discipline of AI Perception is articulated.
     </p>
 
     <p class="last-updated">
-      Last updated: November 2025
+      Last updated: December 2025
     </p>
   </main>
 
